# aurora

./: .env.example  .gitignore  Cargo.toml  README.md  count_lines.py  install_qsv.sh  install_tesseract_ubuntu.sh
.xbp/: redeploy.sh  xbp.json
.xylex/: code_stats.json
cache/: de6d9432-bcf3-4afe-a157-e2ded56a3a16
src/: config.rs  lib.rs  main.rs
src/api/: mod.rs  server.rs
src/api/docs/: mod.rs
src/api/proxy/: route.rs
src/parser/: builder.rs  mod.rs
src/parser/caster/: mod.rs  number.rs  time.rs
src/parser/caster/caster_registry/: mod.rs  revolut_csv.rs
src/parser/csv/: headers.rs  mod.rs
src/parser/pdf/: mod.rs
src/parser/schema/: mod.rs
src/utils/: bytestream_helper.rs  file_extension.rs  mod.rs
