[package]
name = "aurora"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
iban = "0.1.7"
lopdf = "0.35.0"
moka = { version = "0.12.10", features = ["future"] }
pdf = "0.9.0"
pdf-extract = "0.8.2"
pdfium-render = "0.8.28"
printpdf = "0.7.0"
regex = "1.11.1"
reqwest = "0.12.12"
serde_json = "1.0.139"
supabase_rs = "0.4.0"
textwrap = "0.16.1"
tracing = "0.1.41"
tracing-actix-web = "0.7.15"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
